--- a/mpv/input.conf
+++ b/mpv/input.conf
@@ -18,7 +18,7 @@ Meta+t run /Applications/LosslessCut.app/Contents/MacOS/LosslessCut "%{path}"
 
 # Print Playlist
 # p script-message-to osc show-playlist; show-text "${playlist}" 5000 1
-p script-binding show-minimal-playlist
+#p script-binding show-minimal-playlist
 #p playlist-show
 
 # Interpolation toggle
@@ -66,7 +66,7 @@ Meta+ENTER script_binding reveal_in_finder
 Meta+e run "/Applications/LosslessCut.app/Contents/MacOS/LosslessCut" "${path}"
 
 Shift+I show-text "\fs20${path}\nResolution: ${width}x${height}\nFPS: ${fps}\nCodec: ${video-codec}"
-f show-text "${path}\nResolution: ${width}x${height}\nFPS: ${container-fps}\nCodec: ${video-codec}\nTags: ${metadata}\nFilesize: ${file-size}" 500
+f show-text "${path}\nResolution: ${width}x${height}\nFPS: ${container-fps}\nCodec: ${video-codec}\nTags: ${metadata}\nFilesize: ${file-size}" 3000
 
 Ctrl+r script-message play-random-chapter
 
@@ -85,15 +85,16 @@ j script_binding random_seek_within_file
 
 3 script-message-to auto-rotate toggle
 
-o script-binding select/select-playlist
-b script-binding select/select-binding
+Ctrl+o script-binding select/select-playlist
+p script-binding select/select-playlist
+Meta+b script-binding select/select-binding
 
 b script-message-to metadata toggle
 
 m script-binding show-menu
 
 # Toggle fullscreen with ⌘ + F
-Meta+f toggle fullscreen
+Meta+f cycle fullscreen
 
 ESC script-message-to osc visible no
 
