--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -36,7 +36,8 @@ loop-playlist=inf
 force-window=immediate
 
 # On-Screen Display (OSD)
-osd=no
+# osd=no
+osd-level=3
 osd-font="JetBrainsMono Nerd Font Mono"
 osd-font-size=14
 osd-bold=yes
@@ -57,9 +58,10 @@ osd-back-color="#A0000000"
 osd-spacing=0.0
 osd-on-seek=bar
 osd-duration=3000
+osd-margin-y=0
 
 osd-playing-msg="${filename}"
-osd-status-msg="Time: ${time-pos} / ${duration} | Speed: ${speed}x"
+#osd-status-msg='${media-title}\n ${file-size}  ${video-codec}  ${width}x${height} ${container-fps}fps'
 
 # Audio Settings
 #audio-pitch-correction=no  # Uncomment if desired
