--- a/mpv/input.conf
+++ b/mpv/input.conf
@@ -83,7 +83,7 @@ ENTER script_binding random_playlist_jump
 1 script_binding toggle_auto_jump
 j script_binding random_seek_within_file
 
-3 script-message-to auto-rotate toggle
+Meta+a script-message-to auto-rotate toggle
 
 Ctrl+o script-binding select/select-playlist
 p script-binding select/select-playlist
