--- a/helix/config.toml
+++ b/helix/config.toml
@@ -21,7 +21,8 @@ H = ["goto_line_start"]
 D = ["insert_mode", "kill_to_line_end", "normal_mode"]
 d = ["delete_selection"]
 S-backspace = "delete_selection"
-p = ":clipboard-paste"
+p = ":clipboard-paste-after"
+P = ":clipboard-paste-before"
 0 = ["goto_line_start"]
 L = ["goto_line_end"]
 V = ["extend_line", "select_mode"]
