--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -57,11 +57,12 @@ osd-border-style=background-box
 osd-back-color="#A0000000"
 osd-spacing=0.0
 osd-on-seek=bar
-osd-duration=3000
+osd-duration=0
 osd-margin-y=0
-
-osd-playing-msg="${filename}"
-#osd-status-msg='${media-title}\n ${file-size}  ${video-codec}  ${width}x${height} ${container-fps}fps'
+osd-align-y=bottom
+osd-margin-y=20
+osd-playing-msg=""
+osd-playing-msg-duration=0
 
 # Audio Settings
 #audio-pitch-correction=no  # Uncomment if desired
