--- a/mpv/input.conf
+++ b/mpv/input.conf
@@ -13,6 +13,13 @@ Meta+d script-binding replace-playlist
 
 j script-message random_jump
 
+# PAN+SCAN
+Alt+p            cycle-values panscan 0 0.5 1.0
+Alt+Shift+p      set panscan 0
+Alt+p            script-binding auto-panscan/toggle
+Alt+]            script-binding auto-panscan/inc
+Alt+[            script-binding auto-panscan/dec
+
 # Edit with losslesscut
 Meta+t run /Applications/LosslessCut.app/Contents/MacOS/LosslessCut "%{path}"
 
