--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -34,6 +34,7 @@ fullscreen=yes
 native-fs=no
 loop-playlist=inf
 force-window=immediate
+border=no
 
 # On-Screen Display (OSD)
 # osd=no
@@ -48,11 +49,12 @@ osd-border-color="#00000080"
 osd-shadow-offset=0.5
 osd-shadow-color="#00000060"
 osd-margin-x=20
-osd-margin-y=20
+osd-margin-y=10
 osd-bar-align-y=0
 osd-bar-align-x=0
 osd-bar-w=60
 osd-bar-h=2
+# <outline-and-shadow|opaque-box|background-box>
 osd-border-style=background-box
 osd-back-color="#A0000000"
 osd-spacing=0.0
@@ -60,7 +62,6 @@ osd-on-seek=bar
 osd-duration=0
 osd-margin-y=0
 osd-align-y=bottom
-osd-margin-y=20
 osd-playing-msg=""
 osd-playing-msg-duration=0
 
