--- a/mpv/input.conf
+++ b/mpv/input.conf
@@ -1,111 +1,81 @@
-# https://github.com/mpv-player/mpv/blob/master/etc/input.conf
+# --- Playlist ---
+s playlist-shuffle ; show-text "Shuffled ${playlist-count} items" 1000 1
+] playlist-next
+[ playlist-prev
+k playlist-prev
 
-# Shuffle the playlist when pressing R
-# r script-message-to playlistmanager shuffle ; show-text "Shuffled ${playlist-count} items" 1000 1
-r playlist-shuffle ; show-text "Shuffled ${playlist-count} items" 1000 1
+# Jump within directory (requires script exposing these bindings)
+} script-binding next-file-dir
+{ script-binding prev-file-dir
+Alt+] script-binding next-file-dir
+Alt+[ script-binding prev-file-dir
 
-#Meta+d show-text "${path}"
-#Meta+d show-text "path=${path}\nfilename=${filename}"
-#Meta+d show-text "${directory}"
-#Meta+d playlist-clear; loadfile "%f" replace; loadfile "%f" append-play
-Meta+d script-binding replace-playlist
-#Meta+s playlist-clear ; loadfiles "${path}/.*" ; playlist-remove "${path}/${filename}" ; show-text "Playing ${path:name} (${playlist-count} clips)"
+# Randoms (requires your scripts)
+Shift+Enter script-binding play-random
+Enter script-binding random_playlist_jump
+1 script-binding toggle_auto_jump
+j script-binding random_seek_within_file
+Ctrl+r script-message play-random-chapter
 
-j script-message random_jump
-
-# PAN+SCAN
-Alt+p            cycle-values panscan 0 0.5 1.0
-Alt+Shift+p      set panscan 0
+# --- Pan & Scan ---
 Alt+p            script-binding auto-panscan/toggle
 Alt+]            script-binding auto-panscan/inc
 Alt+[            script-binding auto-panscan/dec
+Alt+Shift+p      set panscan 0
 
-# Edit with losslesscut
-Meta+t run /Applications/LosslessCut.app/Contents/MacOS/LosslessCut "%{path}"
+# Rotate 90° clockwise / counter-clockwise
+r        cycle-values video-rotate 0 90 180 270  ; show-text "Rotate: ${video-rotate}°"
+Shift+r  cycle-values video-rotate 0 270 180 90  ; show-text "Rotate: ${video-rotate}°"
 
-# Print Playlist
-# p script-message-to osc show-playlist; show-text "${playlist}" 5000 1
-#p script-binding show-minimal-playlist
-#p playlist-show
-
-# Interpolation toggle
-# i cycle interpolation
-# V cycle-values osd-msg3 "${path}\n${width}x${height} ${video-bitrate} ${video-codec} @ ${fps}fps\n${file-size}" ""
-Ctrl+I cycle interpolation ; show-text "interpolation: ${interpolation}"
-Ctrl+T cycle-values tscale oversample mitchell box ; show-text "tscale=${tscale}"
-
-/ show-text "${metadata/title:}\n${?gt(width,height):${width}:${height}}p @ ${estimated-vf-fps}fps\n${file-size}${?video-bitrate: [${video-bitrate}]}" 5000 1
-
-#/ show-text "${metadata/title:}\n${!add(gt(width,height),gt(height,width)):${width:0}:${height:0}}p @ ${estimated-vf-fps}fps\n${file-size}${?video-bitrate: [${video-bitrate}]}" 5000 1
-# SHIFT+/ show shortcut help
-SHIFT+? show-text "[?:HELP   /:INFO   R:RANDOMIZE]"
-
-# toggle subtitles
+# --- Subtitles ---
 s cycle sub
 
-# Random clip
-SHIFT+Enter script-binding play-random
-
-l seek 5 relative-percent
-Shift+l seek 20 relative-percent
-# alt+l frame-step
-
-h seek -5 relative-percent
-\ seek 15 relative-percent
-# alt+h frame-back-step
-
-alt+l set pause yes; frame-step
-alt+h set pause yes; frame-back-step
-
-# Skip to the next clip
-# ENTER playlist-next
-] playlist-next
-} script_binding next-file-dir
-alt+] script_binding next-file-dir
-
-# Skip to the previous clip
-Shift+ENTER playlist-prev
-[ playlist-prev
-k playlist-prev
-{ script_binding prev-file-dir
-alt+[ script_binding prev-file-dir
-
-# Reveal the currently playing file in finder
-Meta+r script_binding reveal_in_finder
-Meta+ENTER script_binding reveal_in_finder
-
-Meta+e run "/Applications/LosslessCut.app/Contents/MacOS/LosslessCut" "${path}"
-
+# --- Info overlays ---
+/ show-text "${metadata/title:}\n${width}x${height} @ ${estimated-vf-fps}fps\n${file-size}${?video-bitrate: [${video-bitrate}]}" 5000 1
+Shift+? show-text "[?:HELP   /:INFO   R:RANDOMIZE]"
 Shift+I show-text "\fs20${path}\nResolution: ${width}x${height}\nFPS: ${fps}\nCodec: ${video-codec}"
 f show-text "${path}\nResolution: ${width}x${height}\nFPS: ${container-fps}\nCodec: ${video-codec}\nTags: ${metadata}\nFilesize: ${file-size}" 3000
 
-Ctrl+r script-message play-random-chapter
+# --- Interpolation / tscale ---
+Ctrl+I cycle interpolation ; show-text "interpolation: ${interpolation}"
+Ctrl+T cycle-values tscale oversample mitchell box ; show-text "tscale=${tscale}"
 
-# Skip to the previous chapter
-Shift+LEFT add chapter -1
+# --- Seek / Frame step ---
+l seek 5 relative-percent
+Shift+l seek 20 relative-percent
+h seek -5 relative-percent
+\ seek 15 relative-percent
+Alt+l set pause yes ; frame-step
+Alt+h set pause yes ; frame-back-step
 
-# Skip to the next chapter
+# --- Chapters ---
+Shift+LEFT  add chapter -1
 Shift+RIGHT add chapter 1
 
-# Open parent dir in kitty and launch lf
-Ctrl+k script_binding open_in_kitty
+# --- External tools / OS integration (macOS) ---
+# Replace playlist with directory contents (your script)
+Meta+d script-binding replace-playlist
 
-ENTER script_binding random_playlist_jump
-1 script_binding toggle_auto_jump
-j script_binding random_seek_within_file
+# Edit current file in LosslessCut
+Meta+e run "open" "-a" "LosslessCut" "${path}"
 
-Meta+a script-message-to auto-rotate toggle
+# Reveal current file in Finder (your script)
+Meta+r     script-binding reveal_in_finder
+Meta+Enter script-binding reveal_in_finder
 
+# Open parent dir in Kitty (your script)
+Ctrl+k script-binding open_in_kitty
+
+# --- Selection UI (your scripts) ---
 Ctrl+o script-binding select/select-playlist
-p script-binding select/select-playlist
+p      script-binding select/select-playlist
 Meta+b script-binding select/select-binding
 
-b script-message-to metadata toggle
+# --- Misc toggles (your scripts) ---
+Meta+a script-message-to auto-rotate toggle
+b      script-message-to metadata toggle
+m      script-binding show-menu
 
-m script-binding show-menu
-
-# Toggle fullscreen with ⌘ + F
+# --- Fullscreen / OSC ---
 Meta+f cycle fullscreen
-
 ESC script-message-to osc visible no
-
