--- a/mpv/input.conf
+++ b/mpv/input.conf
@@ -1,81 +1,99 @@
-# --- Playlist ---
-s playlist-shuffle ; show-text "Shuffled ${playlist-count} items" 1000 1
-] playlist-next
-[ playlist-prev
-k playlist-prev
+# https://github.com/mpv-player/mpv/blob/master/etc/input.conf
 
-# Jump within directory (requires script exposing these bindings)
-} script-binding next-file-dir
-{ script-binding prev-file-dir
-Alt+] script-binding next-file-dir
-Alt+[ script-binding prev-file-dir
+# Shuffle the playlist when pressing R
+# r script-message-to playlistmanager shuffle ; show-text "Shuffled ${playlist-count} items" 1000 1
+r playlist-shuffle ; show-text "Shuffled ${playlist-count} items" 1000 1
 
-# Randoms (requires your scripts)
-Shift+Enter script-binding play-random
-Enter script-binding random_playlist_jump
-1 script-binding toggle_auto_jump
-j script-binding random_seek_within_file
-Ctrl+r script-message play-random-chapter
+#Meta+d show-text "${path}"
+#Meta+d show-text "path=${path}\nfilename=${filename}"
+#Meta+d show-text "${directory}"
+#Meta+d playlist-clear; loadfile "%f" replace; loadfile "%f" append-play
+Meta+d script-binding replace-playlist
+#Meta+s playlist-clear ; loadfiles "${path}/.*" ; playlist-remove "${path}/${filename}" ; show-text "Playing ${path:name} (${playlist-count} clips)"
 
-# --- Pan & Scan ---
-Alt+p            script-binding auto-panscan/toggle
-Alt+]            script-binding auto-panscan/inc
-Alt+[            script-binding auto-panscan/dec
-Alt+Shift+p      set panscan 0
+j script-message random_jump
 
-# Rotate 90° clockwise / counter-clockwise
-r        cycle-values video-rotate 0 90 180 270  ; show-text "Rotate: ${video-rotate}°"
-Shift+r  cycle-values video-rotate 0 270 180 90  ; show-text "Rotate: ${video-rotate}°"
+# Edit with losslesscut
+Meta+t run /Applications/LosslessCut.app/Contents/MacOS/LosslessCut "%{path}"
 
-# --- Subtitles ---
-s cycle sub
+# Print Playlist
+# p script-message-to osc show-playlist; show-text "${playlist}" 5000 1
+#p script-binding show-minimal-playlist
+#p playlist-show
 
-# --- Info overlays ---
-/ show-text "${metadata/title:}\n${width}x${height} @ ${estimated-vf-fps}fps\n${file-size}${?video-bitrate: [${video-bitrate}]}" 5000 1
-Shift+? show-text "[?:HELP   /:INFO   R:RANDOMIZE]"
-Shift+I show-text "\fs20${path}\nResolution: ${width}x${height}\nFPS: ${fps}\nCodec: ${video-codec}"
-f show-text "${path}\nResolution: ${width}x${height}\nFPS: ${container-fps}\nCodec: ${video-codec}\nTags: ${metadata}\nFilesize: ${file-size}" 3000
-
-# --- Interpolation / tscale ---
+# Interpolation toggle
+# i cycle interpolation
+# V cycle-values osd-msg3 "${path}\n${width}x${height} ${video-bitrate} ${video-codec} @ ${fps}fps\n${file-size}" ""
 Ctrl+I cycle interpolation ; show-text "interpolation: ${interpolation}"
 Ctrl+T cycle-values tscale oversample mitchell box ; show-text "tscale=${tscale}"
 
-# --- Seek / Frame step ---
+/ show-text "${metadata/title:}\n${?gt(width,height):${width}:${height}}p @ ${estimated-vf-fps}fps\n${file-size}${?video-bitrate: [${video-bitrate}]}" 5000 1
+
+#/ show-text "${metadata/title:}\n${!add(gt(width,height),gt(height,width)):${width:0}:${height:0}}p @ ${estimated-vf-fps}fps\n${file-size}${?video-bitrate: [${video-bitrate}]}" 5000 1
+# SHIFT+/ show shortcut help
+SHIFT+? show-text "[?:HELP   /:INFO   R:RANDOMIZE]"
+
+# toggle subtitles
+s cycle sub
+
+# Random clip
+SHIFT+Enter script-binding play-random
+
 l seek 5 relative-percent
 Shift+l seek 20 relative-percent
+# alt+l frame-step
+
 h seek -5 relative-percent
 \ seek 15 relative-percent
-Alt+l set pause yes ; frame-step
-Alt+h set pause yes ; frame-back-step
+# alt+h frame-back-step
 
-# --- Chapters ---
-Shift+LEFT  add chapter -1
+alt+l set pause yes; frame-step
+alt+h set pause yes; frame-back-step
+
+# Skip to the next clip
+# ENTER playlist-next
+] playlist-next
+
+# Skip to the previous clip
+Shift+ENTER playlist-prev
+[ playlist-prev
+k playlist-prev
+
+# Reveal the currently playing file in finder
+Meta+r script_binding reveal_in_finder
+Meta+ENTER script_binding reveal_in_finder
+
+Meta+e run "/Applications/LosslessCut.app/Contents/MacOS/LosslessCut" "${path}"
+
+Shift+I show-text "\fs20${path}\nResolution: ${width}x${height}\nFPS: ${fps}\nCodec: ${video-codec}"
+f show-text "${path}\nResolution: ${width}x${height}\nFPS: ${container-fps}\nCodec: ${video-codec}\nTags: ${metadata}\nFilesize: ${file-size}" 3000
+
+Ctrl+r script-message play-random-chapter
+
+# Skip to the previous chapter
+Shift+LEFT add chapter -1
+
+# Skip to the next chapter
 Shift+RIGHT add chapter 1
 
-# --- External tools / OS integration (macOS) ---
-# Replace playlist with directory contents (your script)
-Meta+d script-binding replace-playlist
+# Open parent dir in kitty and launch lf
+Ctrl+k script_binding open_in_kitty
 
-# Edit current file in LosslessCut
-Meta+e run "open" "-a" "LosslessCut" "${path}"
+ENTER script_binding random_playlist_jump
+1 script_binding toggle_auto_jump
+j script_binding random_seek_within_file
 
-# Reveal current file in Finder (your script)
-Meta+r     script-binding reveal_in_finder
-Meta+Enter script-binding reveal_in_finder
+3 script-message-to auto-rotate toggle
 
-# Open parent dir in Kitty (your script)
-Ctrl+k script-binding open_in_kitty
-
-# --- Selection UI (your scripts) ---
 Ctrl+o script-binding select/select-playlist
-p      script-binding select/select-playlist
+p script-binding select/select-playlist
 Meta+b script-binding select/select-binding
 
-# --- Misc toggles (your scripts) ---
-Meta+a script-message-to auto-rotate toggle
-b      script-message-to metadata toggle
-m      script-binding show-menu
+b script-message-to metadata toggle
 
-# --- Fullscreen / OSC ---
+m script-binding show-menu
+
+# Toggle fullscreen with ⌘ + F
 Meta+f cycle fullscreen
+
 ESC script-message-to osc visible no
