--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -34,7 +34,6 @@ fullscreen=yes
 native-fs=no
 loop-playlist=inf
 force-window=immediate
-border=no
 
 # On-Screen Display (OSD)
 # osd=no
@@ -49,21 +48,20 @@ osd-border-color="#00000080"
 osd-shadow-offset=0.5
 osd-shadow-color="#00000060"
 osd-margin-x=20
-osd-margin-y=10
+osd-margin-y=20
 osd-bar-align-y=0
 osd-bar-align-x=0
 osd-bar-w=60
 osd-bar-h=2
-# <outline-and-shadow|opaque-box|background-box>
 osd-border-style=background-box
 osd-back-color="#A0000000"
 osd-spacing=0.0
 osd-on-seek=bar
-osd-duration=0
+osd-duration=3000
 osd-margin-y=0
-osd-align-y=bottom
-osd-playing-msg=""
-osd-playing-msg-duration=0
+
+osd-playing-msg="${filename}"
+#osd-status-msg='${media-title}\n ${file-size}  ${video-codec}  ${width}x${height} ${container-fps}fps'
 
 # Audio Settings
 #audio-pitch-correction=no  # Uncomment if desired
