--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -31,7 +31,7 @@ demuxer-readahead-secs=10
 
 # Playback behavior
 fullscreen=yes
-native-fs=no
+native-fs=yes
 loop-playlist=inf
 force-window=immediate
 
