--- a/mpv/input.conf
+++ b/mpv/input.conf
@@ -53,11 +53,15 @@ alt+h set pause yes; frame-back-step
 # Skip to the next clip
 # ENTER playlist-next
 ] playlist-next
+} script_binding next-file-dir
+alt+] script_binding next-file-dir
 
 # Skip to the previous clip
 Shift+ENTER playlist-prev
 [ playlist-prev
 k playlist-prev
+{ script_binding prev-file-dir
+alt+[ script_binding prev-file-dir
 
 # Reveal the currently playing file in finder
 Meta+r script_binding reveal_in_finder
@@ -83,7 +87,7 @@ ENTER script_binding random_playlist_jump
 1 script_binding toggle_auto_jump
 j script_binding random_seek_within_file
 
-3 script-message-to auto-rotate toggle
+Meta+a script-message-to auto-rotate toggle
 
 Ctrl+o script-binding select/select-playlist
 p script-binding select/select-playlist
