--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -1,42 +1,42 @@
-# Playback Behavior
+##### GLOBAL DEFAULTS (normal playback) #####
+
+# Built-in fast profile (lower quality, more speed)
+profile=fast
+
+# Window / sizing
 geometry=50%:50%
 autofit-larger=90%x90%
 
-# Decoding (no hwdec, software decoding for stability)
+# Decoding
 hwdec=auto-safe
-profile=fast
 video-sync=display-resample
 
-# Use libplacebo backend explicitly (better performance on macOS)
+# libplacebo backend
 vo=gpu-next
-#gpu-api=next
 
-# Frame interpolation settings (stable macOS-specific choice)
-video-sync=display-resample
+# Frame interpolation (for normal viewing)
 interpolation=yes
 tscale=mitchell
 tscale-window=quadric
-#tscale-radius=1.0
 
-# Conservative scalers (critical!)
+# Conservative scalers
 scale=bilinear
 cscale=bilinear
 dscale=bilinear
 
-# Ensure no dropped frames by buffering generously
+# Cache / demux defaults
 cache=yes
 cache-secs=15
 demuxer-max-bytes=500MiB
 demuxer-readahead-secs=10
 
-# Playback behavior
+# Playback behavior (normal)
 fullscreen=yes
 native-fs=yes
 loop-playlist=inf
 force-window=immediate
 
-# On-Screen Display (OSD)
-# osd=no
+# OSD
 osd-level=3
 osd-font="JetBrainsMono Nerd Font Mono"
 osd-font-size=14
@@ -61,15 +61,44 @@ osd-duration=3000
 osd-margin-y=0
 
 osd-playing-msg="${filename}"
-#osd-status-msg='${media-title}\n ${file-size}  ${video-codec}  ${width}x${height} ${container-fps}fps'
 
-# Audio Settings
-#audio-pitch-correction=no  # Uncomment if desired
-
-# Subtitle defaults
+# Subtitles
 slang=en
 
+# IPC socket
+input-ipc-server=/tmp/mpv-socket
+
+
+##### VJ PROFILE #####
+[vj]
+# hard VJ choices; keep this minimal and perf-focused
+
+# Windowing
+fullscreen=yes
+native-fs=yes
+force-window=immediate
+loop-playlist=inf
+
+# Audio: completely off (cheaper than just mute)
+audio=no
 mute=yes
 
-# Optional IPC for scripts (uncomment if using scripts/remote control)
-input-ipc-server=/tmp/mpv-socket
+# OSD completely off for clean output
+osd-level=0
+osd-bar-align-y=0
+
+# No interpolation for lower latency / less overhead
+interpolation=no
+
+# Extra caching for snappier next-file
+cache=yes
+cache-secs=15
+demuxer-max-bytes=500MiB
+demuxer-readahead-secs=10
+
+# Prefetch next playlist item
+prefetch-playlist=yes
+
+# Don’t bother with subs
+sub=no
+sid=no
