--- a/mpv/input.conf
+++ b/mpv/input.conf
@@ -47,8 +47,8 @@ h seek -5 relative-percent
 \ seek 15 relative-percent
 # alt+h frame-back-step
 
-alt+l set pause yes; frame-step
-alt+h set pause yes; frame-back-step
+# alt+l set pause yes; frame-step
+# alt+h set pause yes; frame-back-step
 
 # Skip to the next clip
 # ENTER playlist-next
