--- a/mpv/input.conf
+++ b/mpv/input.conf
@@ -1,8 +1,7 @@
 # https://github.com/mpv-player/mpv/blob/master/etc/input.conf
 
-# Shuffle the playlist when pressing R
-# r script-message-to playlistmanager shuffle ; show-text "Shuffled ${playlist-count} items" 1000 1
-r playlist-shuffle ; show-text "Shuffled ${playlist-count} items" 1000 1
+# Shuffle the playlist
+s playlist-shuffle ; show-text "Shuffled ${playlist-count} items" 1000 1
 
 #Meta+d show-text "${path}"
 #Meta+d show-text "path=${path}\nfilename=${filename}"
@@ -34,7 +33,7 @@ Ctrl+T cycle-values tscale oversample mitchell box ; show-text "tscale=${tscale}
 SHIFT+? show-text "[?:HELP   /:INFO   R:RANDOMIZE]"
 
 # toggle subtitles
-s cycle sub
+#s cycle sub
 
 # Random clip
 SHIFT+Enter script-binding play-random
@@ -53,6 +52,7 @@ h seek -5 relative-percent
 # Skip to the next clip
 # ENTER playlist-next
 ] playlist-next
+n playlist-next
 } script_binding next-file-dir
 alt+] script_binding next-file-dir
 
@@ -87,7 +87,12 @@ ENTER script_binding random_playlist_jump
 1 script_binding toggle_auto_jump
 j script_binding random_seek_within_file
 
-Meta+a script-message-to auto-rotate toggle
+a script-binding toggle-auto-rotate
+
+# rotate
+r cycle-values video-rotate 0 90 180 270
+# reverse rotate
+R cycle-values video-rotate 0 270 180 90
 
 Ctrl+o script-binding select/select-playlist
 p script-binding select/select-playlist
@@ -100,4 +105,4 @@ m script-binding show-menu
 # Toggle fullscreen with ⌘ + F
 Meta+f cycle fullscreen
 
-ESC script-message-to osc visible no
+#ESC script-binding quick-menu/show-menu
