--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -103,3 +103,5 @@ prefetch-playlist=yes
 # Don’t bother with subs
 sub=no
 sid=no
+
+script-opts=osc-layout=bottombar,osc-valign=0,osc-scalewindowed=1.0
