--- a/mpv/input.conf
+++ b/mpv/input.conf
@@ -83,9 +83,9 @@ Shift+RIGHT add chapter 1
 # Open parent dir in kitty and launch lf
 Ctrl+k script_binding open_in_kitty
 
-ENTER script_binding random_playlist_jump
+j script_binding random_playlist_jump
 1 script_binding toggle_auto_jump
-j script_binding random_seek_within_file
+#s script_binding random_seek_within_file
 
 a script-binding toggle-auto-rotate
 
@@ -106,3 +106,5 @@ m script-binding show-menu
 Meta+f cycle fullscreen
 
 #ESC script-binding quick-menu/show-menu
+
+R cycle-video-rotate
