--- a/mpv/input.conf
+++ b/mpv/input.conf
@@ -15,11 +15,6 @@ j script-message random_jump
 # Edit with losslesscut
 Meta+t run /Applications/LosslessCut.app/Contents/MacOS/LosslessCut "%{path}"
 
-# Print Playlist
-# p script-message-to osc show-playlist; show-text "${playlist}" 5000 1
-#p script-binding show-minimal-playlist
-#p playlist-show
-
 # Interpolation toggle
 # i cycle interpolation
 # V cycle-values osd-msg3 "${path}\n${width}x${height} ${video-bitrate} ${video-codec} @ ${fps}fps\n${file-size}" ""
@@ -95,7 +90,7 @@ r cycle-values video-rotate 0 90 180 270
 R cycle-values video-rotate 0 270 180 90
 
 Ctrl+o script-binding select/select-playlist
-p script-binding select/select-playlist
+o script-binding select/select-playlist
 Meta+b script-binding select/select-binding
 
 b script-message-to metadata toggle
@@ -107,4 +102,4 @@ Meta+f cycle fullscreen
 
 #ESC script-binding quick-menu/show-menu
 
-R cycle-video-rotate
+R cycle video-rotate
