--- a/mpv/input.conf
+++ b/mpv/input.conf
@@ -78,7 +78,7 @@ Shift+RIGHT add chapter 1
 # Open parent dir in kitty and launch lf
 Ctrl+k script_binding open_in_kitty
 
-j script_binding random_playlist_jump
+Shift+j script_binding random_playlist_jump
 1 script_binding toggle_auto_jump
 #s script_binding random_seek_within_file
 
@@ -103,3 +103,5 @@ Meta+f cycle fullscreen
 #ESC script-binding quick-menu/show-menu
 
 R cycle video-rotate
+
+# Ctrl+p progress-bar-minimal/toggle-progress
