--- a/mpv/input.conf
+++ b/mpv/input.conf
@@ -48,7 +48,7 @@ h seek -5 relative-percent
 # ENTER playlist-next
 ] playlist-next
 n playlist-next
-SPACE playlist-next
+SPACE cycle pause
 } script_binding next-file-dir
 alt+] script_binding next-file-dir
 
