--- a/mpv/input.conf
+++ b/mpv/input.conf
@@ -21,7 +21,7 @@ Meta+t run /Applications/LosslessCut.app/Contents/MacOS/LosslessCut "%{path}"
 Ctrl+I cycle interpolation ; show-text "interpolation: ${interpolation}"
 Ctrl+T cycle-values tscale oversample mitchell box ; show-text "tscale=${tscale}"
 
-/ show-text "${metadata/title:}\n${?gt(width,height):${width}:${height}}p @ ${estimated-vf-fps}fps\n${file-size}${?video-bitrate: [${video-bitrate}]}" 5000 1
+# / show-text "${metadata/title:}\n${?gt(width,height):${width}:${height}}p @ ${estimated-vf-fps}fps\n${file-size}${?video-bitrate: [${video-bitrate}]}" 5000 1
 
 #/ show-text "${metadata/title:}\n${!add(gt(width,height),gt(height,width)):${width:0}:${height:0}}p @ ${estimated-vf-fps}fps\n${file-size}${?video-bitrate: [${video-bitrate}]}" 5000 1
 # SHIFT+/ show shortcut help
