--- a/helix/languages.toml
+++ b/helix/languages.toml
@@ -27,3 +27,7 @@ language-servers = [ "xml" ]
 
 [language-server.xml]
 command = "lemminx-osx-aarch_64"
+
+[[language]]
+name = "markdown"
+formatter = { command = "dprint", args = ["fmt", "--stdin", "md"]}
